variable changes and custom domain

--- a/.env.sample
+++ b/.env.sample
@@ -21,6 +21,7 @@ AZURE_OPENAI_TEMPLATE_SYSTEM_MESSAGE="Generate a template for a document given a
 AZURE_OPENAI_GENERATE_SECTION_CONTENT_PROMPT="Help the user generate content for a section in a document. The user has provided a section title and a brief description of the section. The user would like you to provide an initial draft for the content in the section. Must be less than 2000 characters. Only include the section content, not the title. Do not use markdown syntax. Whenever possible, use ingested documents to help generate the section content."
 AZURE_OPENAI_TITLE_PROMPT="Summarize the conversation so far into a 4-word or less title. Do not use any quotation marks or punctuation. Respond with a json object in the format {{\"title\": string}}. Do not include any other commentary or description."
 AZURE_OPENAI_PREVIEW_API_VERSION=2024-05-01-preview
+AZURE_OPENAI_API_VERSION=2024-05-01-preview
 AZURE_OPENAI_STREAM=True
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_NAME=
