azure search params and github pipeline variable changes

--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -1,6 +1,9 @@
 name: Azure Template Validation
 on:
-  workflow_dispatch: 
+  push:
+    branches:
+      - dev
+      - main 
 
 permissions:
   contents: read
