--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -1,6 +1,9 @@
 name: Azure Template Validation
 on:
-   workflow_dispatch: 
+  #  workflow_dispatch:
+  push:
+      branches:
+        - dev 
 
 permissions:
   contents: read
