--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -1,9 +1,6 @@
 name: Azure Template Validation
 on:
-  #  workflow_dispatch:
-  push:
-      branches:
-        - dev 
+   workflow_dispatch:
 
 permissions:
   contents: read
