--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,4 +31,5 @@ jobs:
         cache-dependency-path: '**/package-lock.json'
     - run: npm ci
     - run: NODE_OPTIONS=--max_old_space_size=8192 npm run build --if-present
+    - run: npx jest --clearCache
     - run: npm run test --if-present
