--- a/frontend/package.json
+++ b/frontend/package.json
@@ -72,6 +72,7 @@
     "globals": "^16.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.1",
     "react-test-renderer": "^18.2.0",
