--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -72,8 +72,8 @@ jobs:
       - name: Build Docker Image and optionally push - Internal Registry
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: WebApp.Dockerfile
+          context: ./src
+          file: ./src/WebApp.Dockerfile
           push: ${{ github.ref_name == 'main' || github.ref_name == 'dev' || github.ref_name == 'demo' || github.ref_name == 'dependabotchanges' }}
           tags: |
             ${{ steps.registry.outputs.int_registry }}/webapp:${{ steps.determine_tag.outputs.tagname }}
@@ -83,8 +83,8 @@ jobs:
         if: ${{ github.ref_name == 'main' }}
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: WebApp.Dockerfile
+          context: ./src
+          file: ./src/WebApp.Dockerfile
           push: ${{github.ref_name == 'main' }}
           tags: |
             ${{ steps.registry.outputs.ext_registry }}/webapp:${{ steps.determine_tag.outputs.tagname }}
