--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+        pip install -r src/backend/requirements-dev.txt
     - name: Test with pytest
       run: |
         export PYTHONPATH=$(pwd)
@@ -43,7 +43,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+        pip install -r src/backend/requirements-dev.txt
     - name: Test with pytest
       run: |
         $env:PYTHONPATH=$pwd
