--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r src/backend/requirements-dev.txt
+          pip install -r src/requirements-dev.txt
           
       # Step 3: Run all code quality checks
       - name: Pylint
