--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install Backend Dependencies
         run: |
-          python -m pip install -r src/backend/requirements.txt
+          python -m pip install -r src/requirements.txt
           python -m pip install coverage pytest-cov
           python -m pip install azure-keyvault-secrets
 
