--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
         pip install -r src/requirements-dev.txt
     - name: Test with pytest
       run: |
-        export PYTHONPATH=$(pwd)
+        export PYTHONPATH=$(pwd)/src
         pytest -v --show-capture=stdout -k "not integration"
 
   test_windows:
@@ -46,5 +46,5 @@ jobs:
         pip install -r src/requirements-dev.txt
     - name: Test with pytest
       run: |
-        $env:PYTHONPATH=$pwd
+        $env:PYTHONPATH="$pwd\src"
         pytest -v --show-capture=stdout -k "not integration"
