--- a/azure.yaml
+++ b/azure.yaml
@@ -24,3 +24,20 @@ deployment:
     solutionPrefix: ${parameters.solutionPrefix}
     otherLocation: ${parameters.otherLocation}
     baseUrl: ${parameters.baseUrl}
+
+hooks:
+  postprovision:
+    windows:
+      run: |
+        Write-Host "Web app URL: "
+        Write-Host "$env:WEB_APP_URL" -ForegroundColor Cyan
+      shell: pwsh
+      continueOnError: false
+      interactive: true
+    posix:
+      run: |
+        echo "Web app URL: "
+        echo $WEB_APP_URL
+      shell: sh
+      continueOnError: false
+      interactive: true
