--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,31 +3,87 @@
 # Please see the documentation for all configuration options:
 # https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
+# .github/dependabot.yml
 version: 2
-updates:
-  - package-ecosystem: "npm" # for frontend dependencies
-    directory: "/src/frontend"  
-    schedule:
-      interval: "monthly"
-    commit-message:
-      prefix: "build"
-    target-branch: "dependabotchanges"
-    open-pull-requests-limit: 100
 
-  - package-ecosystem: "pip" # for backend dependencies
-    directory: "/src"   
+updates:
+###############################################################################
+# 1) ONE PR on `dependabotchanges` with *all* normal npm bumps                #
+###############################################################################
+  - package-ecosystem: "npm"
+    directory: "/src/frontend"
     schedule:
       interval: "monthly"
-    commit-message:
-      prefix: "build"
     target-branch: "dependabotchanges"
-    open-pull-requests-limit: 100
-    
+    open-pull-requests-limit: 10
+    commit-message:
+      prefix: "build(deps)"
+
+    groups:
+      all-frontend-deps:
+        patterns: ["*"]            # every dependency
+
+    ignore:                        # keep heavy majors out of this lane
+      - dependency-name: "react"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "@types/react"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "@fluentui/*"
+        update-types: ["version-update:semver-major"]
+
+###############################################################################
+# 2) ONE PR on `dependabot-react-major` with React / FluentUI majors only     #
+#    versioning-strategy: lockfile-only  ⇢ fixes previous timeout / hang      #
+###############################################################################
+  - package-ecosystem: "npm"
+    directory: "/src/frontend"
+    schedule:
+      interval: "monthly"
+    target-branch: "dependabot-react-major"
+    open-pull-requests-limit: 50
+    commit-message:
+      prefix: "build(deps-major)"
+    versioning-strategy: lockfile-only      # ← replaces the invalid key
+
+    groups:
+      react-fluentui-major:
+        patterns:
+          - "react"
+          - "react-dom"
+          - "react-test-renderer"
+          - "@types/react"
+          - "@types/react-dom"
+          - "@fluentui/*"
+          - "eslint-plugin-react"
+          - "@testing-library/react*"
+        update-types: ["major"]
+
+###############################################################################
+# 3) ONE PR for all pip requirements                                          #
+###############################################################################
+  - package-ecosystem: "pip"
+    directory: "/src"
+    schedule:
+      interval: "monthly"
+    target-branch: "dependabotchanges"
+    open-pull-requests-limit: 10
+    commit-message:
+      prefix: "build(deps)"
+    groups:
+      all-backend-deps:
+        patterns: ["*"]
+
+###############################################################################
+# 4) ONE PR for all GitHub Actions                                            #
+###############################################################################
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "monthly"
-    commit-message:
-      prefix: "build"
     target-branch: "dependabotchanges"
-    open-pull-requests-limit: 100
+    open-pull-requests-limit: 10
+    commit-message:
+      prefix: "build(deps)"
+    groups:
+      all-actions:
+        patterns: ["*"]
