Enhance devcontainer setup and scripts for improved environment configuration
- Updated devcontainer.json to include Node.js and Azure CLI features.
- Added setup_env.sh for environment initialization.
- Modified launch.json to set the correct working directory.
- Improved README.md with clearer instructions for sample data processing.
- Updated azure.yaml to simplify sample data command.
- Revised README_LOCAL.md for better clarity on local setup.
- Refactored copy_kb_files.sh to improve role assignment verification.
- Enhanced process_sample_data.sh to fetch parameters from azd env.
- Updated run_create_index_scripts.sh for better Python command handling and error reporting.
- Improved start.sh to ensure backend Python packages are restored before starting the server.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,21 @@
     "image": "mcr.microsoft.com/devcontainers/python:3.11-bullseye",
     "forwardPorts": [50505],
     "features": {
-        "ghcr.io/azure/azure-dev/azd:latest": {}
+        "ghcr.io/devcontainers/features/node:1": {
+            "nodeGypDependencies": true,
+            "installYarnUsingApt": true,
+            "version": "lts",
+            "pnpmVersion": "latest",
+            "nvmVersion": "latest"
+        },
+        "ghcr.io/devcontainers/features/azure-cli:1": {
+            "installBicep": true,
+            "version": "latest",
+            "bicepVersion": "latest"
+        },
+        "ghcr.io/azure/azure-dev/azd:0": {
+            "version": "stable"
+        }
     },
     "customizations": {
         "vscode": {
@@ -16,7 +30,7 @@
             ]
         }
     },
-    "postStartCommand": "git pull origin main && python3 -m pip install -r infra/scripts/index_scripts/requirements.txt && curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash && chmod +x ./scripts/quota_check_params.sh",
+    "postCreateCommand": "bash ./.devcontainer/setup_env.sh",
     "remoteUser": "vscode",
     "hostRequirements": {
         "memory": "4gb"
