--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
         "type": "python",
         "request": "launch",
         "module": "quart",
-        "cwd": "${workspaceFolder}",
+        "cwd": "${workspaceFolder}/src",
         "env": {
             "QUART_APP": "app:app",
             "QUART_ENV": "development",
