--- a/.github/workflows/gp-test-automation.yml
+++ b/.github/workflows/gp-test-automation.yml
@@ -32,6 +32,15 @@ jobs:
       - name: Ensure browsers are installed
         run: python -m playwright install --with-deps chromium
 
+      - name: Open URL
+        run: |
+          echo "Opening URL: ${{ env.url }}"
+          python -m webbrowser "${{ env.url }}"
+
+      - name: Sleep for 30 seconds
+        run: sleep 30s
+        shell: bash
+
       - name: Run tests(1)
         id: test1
         run: |
