--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -14,3 +14,12 @@ flake8==7.2.0
 black==25.1.0
 autoflake==2.3.1
 isort==6.0.1
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-exporter-otlp-proto-http
+opentelemetry-exporter-otlp-proto-grpc
+azure-monitor-events-extension
+opentelemetry-sdk==1.31.1
+opentelemetry-api==1.31.1
+opentelemetry-semantic-conventions==0.52b1
+opentelemetry-instrumentation==0.52b1
+azure-monitor-opentelemetry==1.6.8
